--- a/templates/Xresources.j2
+++ b/templates/Xresources.j2
@@ -94,13 +94,13 @@ URxvt.cursorUnderline: false
 ! Rofi (application launcher)
 !-------------------------------------------------------------------------------
 
-rofi.font:                  Fira Code 12
-rofi.dpi:                   192
-rofi.lines:                 8
-rofi.width:                 16
-rofi.opacity:               100
-rofi.fake-transparency:     false
-rofi.bw:                    4
+! rofi.font:                  Fira Code 12 
+! rofi.dpi:                   192 
+! rofi.lines:                 8 
+! rofi.width:                 16 
+! rofi.opacity:               100 
+! rofi.fake-transparency:     false
+! rofi.bw:                    4
 rofi.disable-history:       false
 rofi.case-sensitive:        false
 ! Set lazy filter limit
