--- a/templates/Xresources.j2
+++ b/templates/Xresources.j2
@@ -11,7 +11,8 @@ Xft.hintstyle:  hintslight
 Xft.autohint:   false
 Xft.lcdfilter:  lcddefault
 
-Xcursor.size:  64
+Xcursor.size:   64
+Xcursor.theme:  Vanilla-DMZ
 
 !-------------------------------------------------------------------------------
 ! URxvt settings
@@ -28,8 +29,8 @@ URxvt.lineSpace: 0
 
 ! Fonts
 URxvt.allow_bold: true
-URxvt*font: xft:Fira Code:pixelsize=28
-URxvt*boldFont: xft:Fira Code:pixelsize=28
+URxvt*font: xft:Hack:pixelsize=28
+URxvt*boldFont: xft:Hack:pixelsize=28
 ! Fix font space
 URxvt*letterSpace: -1
 
