--- a/templates/Xresources.j2
+++ b/templates/Xresources.j2
@@ -2,9 +2,18 @@
 ! Xft settings
 !-------------------------------------------------------------------------------
 
+! https://unix.stackexchange.com/questions/137844/per-screen-font-config#210792
+
+#if SCREEN_NUM == 0
+Xft.dpi: 192
+#endif
+
+#if SCREEN_NUM == 1
+Xft.dpi:  100
+#endif
+
 ! From https://wiki.archlinux.org/index.php/Infinality#Usage
 Xft.antialias:  true
-Xft.dpi:        192
 Xft.rgba:       rgb
 Xft.hinting:    true
 Xft.hintstyle:  hintslight
@@ -28,9 +37,18 @@ URxvt.internalBorder: 3
 URxvt.lineSpace: 0
 
 ! Fonts
-URxvt.allow_bold: true
+
+#if SCREEN_NUM == 0
 URxvt*font: xft:Hack:pixelsize=28
 URxvt*boldFont: xft:Hack:pixelsize=28
+#endif
+
+#if SCREEN_NUM == 1
+URxvt*font: xft:Hack:pixelsize=18
+URxvt*boldFont: xft:Hack:pixelsize=18
+#endif
+
+URxvt.allow_bold: true
 ! Fix font space
 URxvt*letterSpace: -1
 
